<resources>
    <string name="app_name" translatable="false">ProgressFeatureSample</string>
    <string name="task_name" translatable="false">.progress_flow</string>

    <string-array name="education_array">
        <item>Нет</item>
        <item>Среднее</item>
        <item>Средне специальное</item>
        <item>Высшее</item>
        <item>Аспирантура</item>
    </string-array>

    <string name="new_application_btn">Новая заявка</string>
    <string name="from_draft_btn">Из черновика</string>

    <string name="next_btn">Далее</string>
    <string name="ready_btn">Готово</string>

    <string name="personal_info_name_hint">Имя</string>
    <string name="personal_info_surname_hint">Фамилия</string>
    <string name="personal_info_education_hint">Образование</string>
    <string name="personal_info_experience_txt">У меня есть опыт работы</string>

    <string name="education_txt">Образование</string>
    <string name="education_place_txt">Название учебного заведения</string>
    <string name="education_faculty_txt">Факультет</string>
    <string name="education_specialty_txt">Специальность</string>
    <string name="education_start_date_txt">Начало обучения</string>
    <string name="education_end_date_txt">Конец обучения</string>
    <string name="education_others_txt">Прочее</string>
    <string name="education_academic_degree_txt">Степень</string>

    <string name="experience_txt">Место работы</string>
    <string name="experience_company_txt">Название организации</string>
    <string name="experience_position_txt">Должность</string>
    <string name="experience_start_txt">Начало работы</string>
    <string name="experience_end_txt">Окончание работы</string>
    <string name="experience_add_txt">Добавить ещё одно место</string>
    <string name="experience_to_mush_for_sample_toast_txt">Это уже слишком для семпла!</string>

    <string name="about_me_hint">Обо мне</string>
    <string name="about_me_header_text">Расскажите немного о себе и любом релевантном опыте</string>

    <string name="motivation_error_stub_txt">Упс ( Что-то пошло не так</string>

    <string name="thank_you_txt">Ваша заявка успешно получена.\nМы свяжемся с вами в ближайшее время!</string>
</resources>
