<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:animateLayoutChanges="true"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp56">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:text="@string/education_txt"
                android:textAppearance="@style/RobotoRegular.16"
                android:textColor="?android:attr/textColorSecondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_place_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/place_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/faculty_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_faculty_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/faculty_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specialty_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_specialty_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/specialty_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_start_date_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@android:drawable/ic_menu_my_calendar"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_end_date_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@android:drawable/ic_menu_my_calendar"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/others_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp16"
                android:text="@string/education_others_txt"
                android:textAppearance="@style/RobotoRegular.16"
                android:textColor="?android:attr/textColorSecondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/degree_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education_academic_degree_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/degree_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/next_btn"
        style="@style/Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/dp8"
        android:text="@string/next_btn" />

</FrameLayout>